public class Ubicacion {
  private String nombre;
  private Double longitud;
  private Double latitud;

  public Ubicacion(String nombre, Double longitud, Double latitud) {
    this.nombre = nombre;
    this.longitud = longitud;
    this.latitud = latitud;
  }
}
